replace fixed table padding with spacing variables in table object

--- a/app/scss/_table.scss
+++ b/app/scss/_table.scss
@@ -26,7 +26,7 @@ $table-cell-label-width: 110px;
 
   .o-table th,
   .o-table td {
-    padding: 0.8em;
+    padding: $spacing-lg;
     text-align: left;
     vertical-align: top;
   }
@@ -51,14 +51,13 @@ $table-cell-label-width: 110px;
 
   .o-table thead tr {
     position: absolute;
-    top: -9999px;
     left: -9999px;
   }
 
   .o-table tbody {
 
     tr {
-      padding: 10px 0;
+      padding: $spacing-md 0;
 
       &:not(:first-child) {
         border-top: 1px solid $design-light-gray-color;
@@ -77,7 +76,7 @@ $table-cell-label-width: 110px;
     &:before {
       position: absolute;
       left: (-$table-cell-label-width);
-      width: $table-cell-label-width - 10px;
+      width: $table-cell-label-width - $spacing-md;
       font-weight: normal;
       text-align: right;
       white-space: nowrap;
